Sun Apr 17 14:11:52 UTC 2011  Chad Beaulac <chad@objectivesolutions.com>
	* ace/Stream.cpp
	  Reverted previous commit. #3912 is not fixed.

	* tests/run_test.lst
	  Added (not)FIX_BUGS_ONLY to Bug_3912_Regression_Test

Sun Apr 17 13:30:23 UTC 2011  Chad Beaulac <chad@objectivesolutions.com>

	* ace/Stream.cpp
	  ACE_Stream::remove(module) always calls close on the Module now.
	  It use to only call close when the flags was M_DELETE_NONE.

	* tests/Bug_3912_Regression_Test.conf
	* tests/Bug_3912_Regression_Test.cpp
	  Tests that close is called on an ACE_Task that's
	  the reader in a Module that's removed from the Stream.

	* tests/Service_Config_Stream_DLL.cpp
	  Added make_close factory method for a new Module.
	
	* tests/Bug_3334_Regression_Test.cpp
	  Initialized status variable to zero.
	
	* tests/run_test.lst
	* tests/tests.mpc
	  Added new test.

Fri Apr 15 14:07:34 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tests/Bug_3709_Regression_Test.cpp:

          Work-around a clang compiler crash in this test.
          A bugzilla bug has been filed with the clang project.

Fri Apr 15 08:30:40 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3943_Regression_Test.cpp:
          Fixed mingw warning

Fri Apr 15 07:51:49 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/global.features:
          Disable coredx by default

Thu Apr 14 19:17:04 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Bug_3943_Regression_Test.cpp:

          Scoreboard cleanup. "small" appears to be a reserved word on some
          win32 builds.

Thu Apr 14 09:27:20 UTC 2011  Olli Savia  <ops@iki.fi>

        * include/makeinclude/platform_freebsd.GNU:
          Removed unused SOBUILD variable.

Thu Apr 14 07:58:19 UTC 2011  Olli Savia  <ops@iki.fi>

        * ace/ACE.cpp:
        * ace/config-lynxos.h:
        * ace/os_include/sys/os_resource.h:
          Removed legacy rlimit related settings.
