@@ -1,5 +1,0 @@
-stream dynamic Close_Test_Stream STREAM *Service_Config_Stream_DLL:make_stream() active
-{
-  dynamic Close_Test_Module Module *Service_Config_Stream_DLL:make_close()
-}
-
